PR13155/BZ730884: ext3/jbd tracepoint listings

A few tracepoint-class-specific hacks to make ext3 / jbd / ext4 / jbd2
all show up on appropriate kernels.

* tapsets.cxx (tracepoint_extra_decls): Add extra ext[34] clauses.